--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.18.2",
         "mongodb": "^6.20.0",
         "mongoose": "^8.0.0",
-        "multer": "^2.0.2"
+        "multer": "^2.0.2",
+        "multer-storage-cloudinary": "^4.0.0"
     }
 }
