--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google/genai": "^1.27.0",
         "cloudinary": "^2.8.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -19,6 +20,7 @@
         "mongodb": "^6.20.0",
         "mongoose": "^8.0.0",
         "multer": "^2.0.2",
-        "multer-storage-cloudinary": "^4.0.0"
+        "multer-storage-cloudinary": "^4.0.0",
+        "node-fetch": "^3.3.2"
     }
 }
