--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
     "name": "gulf-career-gateway",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "type": "commonjs",
     "scripts": {
-        "start": "node index.js",
+        "start": "node src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@google/genai": "^1.27.0",
         "cloudinary": "^2.8.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -20,7 +19,6 @@
         "mongodb": "^6.20.0",
         "mongoose": "^8.0.0",
         "multer": "^2.0.2",
-        "multer-storage-cloudinary": "^4.0.0",
-        "node-fetch": "^3.3.2"
+        "multer-storage-cloudinary": "^4.0.0"
     }
 }
