--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google/genai": "^1.28.0",
         "cloudinary": "^2.8.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
