--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "mongoose": "^8.0.0",
         "multer": "^2.0.2",
         "multer-storage-cloudinary": "^4.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10"
     }
 }
