--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-    "name": "gulf-career-gateway",
+    "name": "gulf-career-backend",
     "version": "1.0.0",
-    "description": "",
+    "description": "Backend for Gulf Career Gateway with Google Gemini Vision AI integration",
     "main": "src/index.js",
     "type": "commonjs",
     "scripts": {
         "start": "node src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon src/index.js"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "dependencies": {
-        "@google/genai": "^1.28.0",
-        "cloudinary": "^2.8.0",
+        "@google/generative-ai": "^0.15.0",
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongodb": "^6.20.0",
         "mongoose": "^8.0.0",
         "multer": "^2.0.2",
-        "multer-storage-cloudinary": "^4.0.0"
+        "multer-storage-cloudinary": "^4.0.0",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
