--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
     "name": "gulf-career-backend",
     "version": "1.0.0",
-    "description": "Backend for Gulf Career Gateway with Google Gemini Vision AI integration",
-    "main": "src/index.js",
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js"
     },
     "dependencies": {
-        "@google/generative-ai": "^0.15.0",
-        "cloudinary": "^1.41.3",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^8.0.0",
-        "multer": "^2.0.2",
-        "multer-storage-cloudinary": "^4.0.0",
-        "node-fetch": "^3.3.2"
+        "dotenv": "^16.3.1",
+        "node-fetch": "^3.3.2",
+        "@google/generative-ai": "^0.10.0",
+        "cloudinary": "^1.41.3",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.0"
     }
 }
