--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
     "name": "gulf-career-backend",
     "version": "1.0.0",
     "type": "module",
+    "description": "Backend API for Gulf Career Gateway",
+    "main": "api/index.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon api/index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^8.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "node-fetch": "^3.3.2",
-        "@google/generative-ai": "^0.10.0",
-        "cloudinary": "^1.41.3",
-        "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^3.1.0"
+        "express": "^4.19.2",
+        "mongoose": "^8.0.0",
+        "nodemon": "^3.1.10"
     }
 }
